[project]
name = "croissant-discordbot"
version = "0.1.0"
description = "A production-grade, per-guild Discord bot with async PostgreSQL persistence, AI-powered conversations via Groq, scheduled channel lifecycle management, and Reddit media integration — built for real operational demands."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "asyncpraw>=7.8.1",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "groq>=1.2.0",
]
